# mhnos

./: README.md  commands  index.html  manifest.json  mhnos-sw.js  mhnos-vite-worker.js  notes.md  sandpack-dev-plan.md  styles.css  worker-notes.md
command-demo/: index.html
command-demo/src/: App.tsx  styles.css
demos/: README.md  agent_context.md  app.js  donut.py  index.html  install-react.cmds  launcher.json  list-opfs.js  package.json  server.js  style.css  test-lodash.js  wget-url.md
demos/hello/: index.html
demos/hello/src/: App.tsx  styles.css
demos/react-oapp-demo/: README.md  app.js  index.html  main.js  styles.css
demos/react-oapp-demo/components/: App.js
packedit/os-bundler/: bundler.js  index.html
react-test/: index.html
react-test/src/: App.tsx  styles.css
runtime/: .credentials  .dockerignore  .env  .env-lookitexample  .env.example  Dockerfile  Dockerfile.remote  IMPLEMENTATION_STATUS.md  README-REMOTE.md  README.md  REMOTE_DEPLOYMENT_SUMMARY.md  deploy-vps.sh  docker-compose.remote.yml  docker-compose.yml  down-openclaw.sh  entrypoint.sh  install.sh  mount-s3.sh  openclaw-run.sh  package.json  server-remote.js  server.js  test-client.js
runtime/dev-workspace/: f  tests.js
runtime/templates/: default.capnp  nodejs-compat.capnp
servers/ws-proxy-rust/: Cargo.toml
servers/ws-proxy-rust/src/: main.rs
src/apps/: AppBuilder.js
src/kernel/: audio.js  fs.js  main.js
src/runtime/: python-worker.js  worker.js
src/system/: agentCore.js  appBuilderFlow.js  apps.js  backup.js  boot.js  llmClient.js  npm.js  shell.js  wm.js
(+19 files in other folders)
