[package]
name = "mhnos-ws-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "net"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate", "stream"] }
base64 = "0.21"
tokio-rustls = "0.24"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
webpki-roots = "0.25"
